add data and set details

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,3 +50,95 @@ a {
   width: 100%;
   appearance: none;
 }
+.content {
+  padding: 20px 20px;
+  position: relative;
+  border-radius: 6px;
+  background-color: #234973;
+  width:max-content
+}
+.timeline {
+  position: relative;
+  z-index: 1;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  border:dashed 1px #234973;
+}
+
+.container {
+  width: 50%;
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+}
+
+.container::after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  right: -17px;
+  width: 15px;
+  height: 15px;
+  z-index: 1;
+  border-radius: 50%;
+  background-color: #ffc107;
+  border: 2px solid #234973;
+}
+.right {
+  left: 50%;
+}
+.right::before {
+  content: " ";
+  position: absolute;
+  top: 22px;
+  left: 30px;
+  width: 0;
+  height: 0;
+  /* z-index: 1; */
+  border: medium solid #234973;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #234973 transparent transparent;
+}
+
+.right::after {
+  left: -18px;
+}
+h2 {
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 15px;
+}
+@media screen and (max-width: 600px) {
+  .timeline::after {
+      left: 31px;
+  }
+
+  .container {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+  }
+
+  .container::before {
+      left: 60px;
+      border: medium solid #234973;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent #234973 transparent transparent;
+  }
+
+  .right::after {
+      left: 14px;
+  }
+
+  .right {
+      left: 0%;
+  }
+}
