--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,7 +90,8 @@ a {
   border: 2px solid #234973;
 }
 .right {
-  left: 50%;
+  /* left: 50%; */
+  left:10px;
 }
 .right::before {
   content: " ";
